--- a/assets/frontend/css/main.css
+++ b/assets/frontend/css/main.css
@@ -2293,11 +2293,20 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area {
-	background: url(../img/header-bg.jpg) center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	margin: 0px;
-	padding: 0px;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 @media (max-width: 767.98px) {
@@ -2525,7 +2534,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .service-area {
-	background: url(../img/service-bg.jpg) center;
+	background: url(https://cdn.designsmaz.com/wp-content/uploads/2014/10/google-inspired.jpg) center;
 	background-size: cover
 }
 
